...
                android:layout_marginTop="@dimen/element_spacing_large"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edit_title"
                    style="@style/MyEditTextSingleLine"
                    android:hint="@string/hint_name"
                    android:imeOptions="actionDone"
                    android:syncKeyBoard="@{true}"
                    android:text="@={viewModel.titleCategory}" />

...
                android:id="@+id/color_chooser"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintTop_toBottomOf="@id/label_color" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_add"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="@dimen/element_spacing_large"
                android:text="@string/save_category"
                android:enabled="@{!viewModel.titleCategory.isEmpty()}"
...
