...
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@{title}"
                    android:maxLines="2"
                    android:textSize="@dimen/text_size_medium"
                    custom:layout_constraintLeft_toRightOf="@id/color"
                    custom:layout_constraintRight_toLeftOf="@id/play"
                    custom:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:id="@+id/info"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
...
